<resources>
    <string name="app_name">友趣团购</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">新界面而已</string>

    <string name="login_wangjimima">忘记密码?</string>
    <string name="login_denglu">登录</string>
    <string name="login_zhuce">注册</string>
    <string name="login_fanhui"></string><!--为标题栏的返回(去掉所有返回文字)-->

    <string name="login_zhuce_shoujihao">请输入注册的手机号</string>
    <string name="login_zhuce_psw">请输入密码</string>
    <string name="login_zhuce_pswTwo">请确认您的密码</string>
    <string name="login_zhuce_inviteshoujihao">请输入分享码</string>
    <string name="login_zhuce_yanzhengma">请输入验证码</string>
    <string name="login_zhuce_takeyanzhengma">获取验证码</string>
    <string name="login_zhuce_xieyione">注册成功表示您已同意</string>
    <string name="login_zhuce_xieyitwo">《友趣团购注册协议》</string>
    <string name="login_zhuce_xieyithree">相关协议</string>
    <string name="login_zhuce_gotozhuce">去登录</string>

    <string name="login_psw_title">忘记密码</string>
    <string name="login_psw_shoujihao">请输入您的手机号</string>
    <string name="login_psw_psw">请设置您的新密码</string>
    <string name="login_psw_pswTwo">请再输入新的密码</string>
    <string name="login_psw_confirm">确认</string>

    <string name="HomePage_name1">意向专区</string>
    <string name="HomePage_name2">团购专区</string>
    <string name="HomePage_name3">邀请好友</string>
    <string name="HomePage_name4">推荐商品</string>
    <string name="HomePage_name5">¥</string>
    <string name="HomePage_name6">升级VIP</string>
    <string name="HomePage_name7">首次充值最低充值599元，</string>
    <string name="HomePage_name8">其中300元为您的押金，</string>
    <string name="HomePage_name9">在赠送您299母币供你消费。</string>
    <string name="HomePage_name10">立即升级</string>
    <string name="HomePage_name11">599.00</string>
    <string name="HomePage_name12">商品详情页</string>
    <string name="HomePage_name13">快递:</string>
    <string name="HomePage_name14">件</string>
    <string name="HomePage_name15">月销量</string>
    <string name="HomePage_name16">消费评价</string>
    <string name="HomePage_name17">图文详情</string>
    <string name="HomePage_name18">商品评价()</string>
    <string name="HomePage_name19">综合评分</string>
    <string name="HomePage_name20">分</string>
    <string name="HomePage_name21">分享</string>
    <string name="HomePage_name22">收藏</string>
    <string name="HomePage_name23">加入购物车</string>
    <string name="HomePage_name24">立刻购买</string>
    <string name="HomePage_name25">分</string>
    <string name="HomePage_name26">颜色分类:</string>
    <string name="HomePage_name27">查看全部评价</string>
    <string name="HomePage_name28">库存</string>
    <string name="HomePage_name29">件</string>
    <string name="HomePage_name30">请选择</string>
    <string name="HomePage_name31">颜色分类</string>
    <string name="HomePage_name32">购买数量</string>
    <string name="HomePage_name33">(限购10件)</string>
    <string name="HomePage_name34">1</string>
    <string name="HomePage_name35">取消</string>
    <string name="HomePage_name36">立即升级</string>
    <string name="HomePage_name37">确认订单</string>
    <string name="HomePage_name38">收货地址：</string>
    <string name="HomePage_name39">x</string>
    <string name="HomePage_name41">数量</string>
    <string name="HomePage_name42">配送方式</string>
    <string name="HomePage_name43">快递（包邮）</string>
    <string name="HomePage_name44">微信支付</string>
    <string name="HomePage_name444">（推荐）</string>
    <string name="HomePage_name45">支付宝支付</string>
    <string name="HomePage_name46">余额支付</string>
    <string name="HomePage_name47">合计金额:¥</string>
    <string name="HomePage_name48">确认支付</string>
    <string name="HomePage_name49">+ 新增收货地址</string>
    <string name="HomePage_name50">收货地址</string>
    <string name="HomePage_name51">已经设为默认</string>
    <string name="HomePage_name52">编辑</string>
    <string name="HomePage_name53">删除</string>
    <string name="HomePage_name54">选择</string>
    <string name="HomePage_name55">分享人:</string>
    <string name="HomePage_name56">下级邀请:</string>
    <string name="HomePage_name57">联系他/她</string>
    <string name="HomePage_name58">请输入您要充值的金额</string>
    <string name="HomePage_name59">元</string>
    <string name="HomePage_name60">请输入您要提现的金额</string>
    <string name="HomePage_name61">请选择 颜色分类</string>
    <string name="HomePage_name63">预售价格</string>
    <string name="HomePage_name64">我要团购</string>
    <string name="HomePage_name65">团购需要最低人数</string>
    <string name="HomePage_name66">人</string>
    <string name="HomePage_name67">已团购</string>
    <string name="HomePage_name68">未团购</string>
    <string name="HomePage_name69">立即订购</string>
    <string name="HomePage_name70">新增收货地址</string>
    <string name="HomePage_name71">确定</string>
    <string name="HomePage_name72">请输入姓名</string>
    <string name="HomePage_name73">请输入电话</string>
    <string name="HomePage_name74">请选择省</string>
    <string name="HomePage_name75">请选择市</string>
    <string name="HomePage_name76">请选择区</string>
    <string name="HomePage_name77">请输入详细街道地址</string>
    <string name="HomePage_name78">添加地址</string>
    <string name="HomePage_name79">修改收货地址</string>
    <string name="HomePage_name80">请输入您的真实姓名</string>
    <string name="HomePage_name81">请输入您的身份证号</string>
    <string name="HomePage_name82">请输入您的手机号</string>
    <string name="HomePage_name83">实名认证</string>
    <string name="HomePage_name84">xx人想买</string>
    <string name="HomePage_name85">开团商品</string>
    <string name="HomePage_name86">当前订单:</string>
    <string name="HomePage_name87">产品参数</string>
    <string name="HomePage_name88">图文详情</string>
    <string name="HomePage_name89">分享</string>
    <string name="HomePage_name90">收藏</string>
    <string name="HomePage_name91">型号</string>
    <string name="HomePage_name92">vip商品</string>
    <string name="HomePage_name93">返券专区</string>
    <string name="HomePage_name94">企业风采</string>
    <string name="HomePage_name95">搜索</string>
    <string name="HomePage_name96">详情页</string>


    <string name="mine_name1">设置</string>
    <string name="mine_name2">子币</string>
    <string name="mine_name3">母币</string>
    <string name="mine_name4">我的订单</string>
    <string name="mine_name5">查看全部订单</string>
    <string name="mine_name6">拼团中</string>
    <string name="mine_name7">待发货</string>
    <string name="mine_name8">待收货</string>
    <string name="mine_name9">待评价</string>
    <string name="mine_name10">完善资料</string>
    <string name="mine_name11">升级VIP</string>
    <string name="mine_name12">我的团队</string>
    <string name="mine_name13">充值</string>
    <string name="mine_name14">邀请好友</string>
    <string name="mine_name15">金牌团队</string>
    <string name="mine_name16">银牌团队</string>
    <string name="mine_name17">铜牌团队</string>
    <string name="mine_name18">当前所在</string>
    <string name="mine_name19">查看详情</string>
    <string name="mine_name20">全部成员</string>
    <string name="mine_name21">未充值成员</string>
    <string name="mine_name22">当前人数：</string>
    <string name="mine_name23">已注册</string>
    <string name="mine_name24">成员详情页</string>
    <string name="mine_name25">姓名</string>
    <string name="mine_name26">电话</string>
    <string name="mine_name27">注册</string>
    <string name="mine_name28">充值</string>
    <string name="mine_name29">我的分享人</string>
    <string name="mine_name30">我的团队人数</string>
    <string name="mine_name31">分享情况</string>
    <string name="mine_name32">未充值</string>
    <string name="mine_name33">当前余额：</string>
    <string name="mine_name34">充值xx元可兑换xx子币</string>
    <string name="mine_name35">规格：</string>
    <string name="mine_name36">退出登录</string>
    <string name="mine_name37">客服电话</string>
    <string name="mine_name38">我的收藏</string>
    <string name="mine_name39">取消收藏</string>
    <string name="mine_name40">购物车</string>
    <string name="mine_name41">全选</string>
    <string name="mine_name42">合计：</string>
    <string name="mine_name43">去结算</string>
    <string name="mine_name44">姓名</string>
    <string name="mine_name45">电话</string>
    <string name="mine_name46">身份证号</string>
    <string name="mine_name47">修改头像</string>
    <string name="mine_name48">评论</string>
    <string name="mine_name49">请输入评论内容</string>
    <string name="mine_name50">微信绑定</string>
    <string name="mine_name51">正常规格  型号</string>
    <string name="mine_name52">x1</string>
    <string name="mine_name53">昵称</string>
    <string name="mine_name54">子母币支付密码</string>

    <string name="mine_order_name1">我的订单</string>
    <string name="mine_order_name2">全部</string>
    <string name="mine_order_name3">完善资料</string>
    <string name="mine_order_name4">我的收藏</string>

    <string name="mialog_name">平台须知</string>
    <string name="mialog_name2">如需下一步操作</string>
    <string name="mialog_name3">请您先登录哦</string>
    <string name="mialog_name4">确定</string>
    <string name="mialog_name5">我同意并进入</string>
    <string name="mialog_name6">请您先购买VIP哦！</string>
    <string name="mialog_name7">立即购买</string>
    <string name="mialog_name8">恭喜您成功升级为VIP！</string>
    <string name="mialog_name9">赠送您xx母币,xx子币</string>
    <string name="mialog_name10">确定</string>
    <string name="mialog_name11">进行下一步</string>
    <string name="mialog_name12">请您先升级VIP哦</string>
    <string name="mialog_name13">说明须知</string>
    <string name="mialog_name14">请输入您的真实姓名</string>
    <string name="mialog_name15">评价成功哦</string>
    <string name="mialog_name16">升级vip需要您进行实名认证哦</string>
    <string name="mialog_name17">去实名认证</string>
    <string name="mialog_name18">恭喜您验证成功</string>
    <string name="mialog_name20">确定要删除此地址么？</string>
    <string name="mialog_name21">请输入兑换母币数量</string>
    <string name="mialog_name22">需支付0.0子币</string>
    <string name="mialog_name23">确定支付</string>
    <string name="mialog_name24">子币？</string>
    <string name="mialog_name19">认证失败哦！请你您重新认证。</string>

    <string name="home_item_name1">人付款</string>
    <string name="home_item_name2">子币</string>
    <string name="home_item_name3">母币</string>
    <string name="home_item_name4">兑换</string>
    <string name="home_item_name5">元</string>

    <string name="currency_name1">购物券兑换</string>
    <string name="currency_name2">发布</string>
    <string name="currency_name3">官方出售</string>
    <string name="currency_name4">个人出售</string>
    <string name="currency_name5">请输入发布子币的数量</string>
    <string name="currency_name6">请输入共发布子币的金额</string>
    <string name="currency_name7">请输入简要描述</string>
    <string name="currency_name8">确认发布</string>
    <string name="currency_name9">消息通知</string>
    <string name="currency_name10">通知:</string>
    <string name="currency_name11">邀请好友</string>
    <string name="currency_name12">邀请码</string>
    <string name="currency_name13">立即邀请</string>
    <string name="currency_name14">请输入母币数量</string>
    <string name="currency_name15">请输入子币单价</string>
    <string name="vip_detail"><u>了解详情</u></string>

    <string name="classification_name">商品分类</string>
    <string name="classification_name2">请输入您要搜索的关键词</string>
    <string name="classification_name3">请输入您要的宝贝</string>
    <string name="shenfenzheng_back">请上传身份证照片\n（反面）</string>
    <string name="shenfenzheng_over">请上传身份证照片\n（正面）</string>
</resources>
