<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_retrieve_psw"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorgraynessb"
    android:orientation="vertical"
    tools:context="com.linkhand.fenxiao.activity.login.RetrievePswActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_marginBottom="1dp"
        android:background="@color/gray_c"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/fenxiao_return_id2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView

                android:layout_width="@dimen/sum_20"
                android:layout_height="@dimen/sum_20"
                android:layout_marginBottom="@dimen/sum_3"
                android:layout_marginLeft="@dimen/sum_15"
                android:layout_marginTop="@dimen/sum_3"
                android:src="@drawable/returnleft"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sum_5"
                android:text="@string/login_fanhui"
                android:textColor="@color/title_tv_color"/>
        </LinearLayout>


        <TextView
            android:id="@+id/fenxiao_title_id2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/sum_50"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_psw_title"
            android:textColor="@color/title_tv_color"
            android:textSize="@dimen/sum_20"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sum_10"
        android:layout_marginRight="@dimen/sum_10"
        android:layout_marginTop="@dimen/sum_10"
        android:background="@color/colorwhites"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone_number_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_psw_shoujihao"
            android:inputType="number"
            android:maxLength="11"
            android:padding="@dimen/sum_10"
            android:textColorHint="@color/colorgraynessd"
            android:textSize="14sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorgraynessb"/>

        <EditText
            android:id="@+id/paw_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_psw_psw"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="@dimen/sum_10"
            android:textColorHint="@color/colorgraynessd"
            android:textSize="14sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorgraynessb"/>

        <EditText
            android:id="@+id/new_psw_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_psw_pswTwo"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="@dimen/sum_10"
            android:textColorHint="@color/colorgraynessd"
            android:textSize="14sp"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sum_10"
        android:layout_marginRight="@dimen/sum_10"
        android:layout_marginTop="@dimen/sum_10"
        android:background="@color/colorwhites">

        <EditText
            android:id="@+id/auth_code_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_zhuce_yanzhengma"
            android:inputType="number"
            android:maxLength="6"
            android:padding="@dimen/sum_10"
            android:textColorHint="@color/colorgraynessd"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/send_sum_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/sum_5"
            android:text="@string/login_zhuce_takeyanzhengma"
            android:textColor="@color/colorred"/>
    </LinearLayout>


    <TextView
        android:id="@+id/fenxiao_psw_confirm_id"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sum_40"
        android:layout_marginLeft="@dimen/sum_10"
        android:layout_marginRight="@dimen/sum_10"
        android:layout_marginTop="@dimen/sum_10"
        android:background="@drawable/btn_bg_rounded_two"
        android:text="@string/login_psw_confirm"/>
</LinearLayout>
