<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_upgrade_vip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorgraynessb"
    android:orientation="vertical"
    tools:context="com.linkhand.fenxiao.activity.homepage.home.UpgradeVIPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/gray_c"
        android:layout_marginBottom="1dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/home_return_id"
            android:layout_width="@dimen/sum_20"
            android:layout_height="@dimen/sum_20"
            android:layout_marginBottom="@dimen/sum_3"
            android:layout_marginLeft="@dimen/sum_15"
            android:layout_marginTop="@dimen/sum_3"
            android:src="@drawable/returnleft"/>


        <TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/sum_35"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/sum_5"
            android:paddingRight="@dimen/sum_5"
            android:text="@string/HomePage_name6"
            android:textColor="@color/title_tv_color"
            android:textSize="@dimen/sum_20"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/vip_imageview_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sum_180"
        android:background="@color/colorwhites"
        android:scaleType="fitXY"
        android:src="@drawable/homevip_two"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sum_1"
        android:background="@color/colorwhites"
        android:padding="@dimen/sum_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HomePage_name5"
            android:textColor="@color/colorred"/>

        <TextView
            android:id="@+id/vip_rmb_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="599.00"
            android:textColor="@color/colorred"
            android:textSize="@dimen/sum_16"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/HomePage_name6"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sum_10"
        android:background="@color/colorwhites"
        android:paddingLeft="@dimen/sum_10"
        android:paddingTop="@dimen/sum_10"
        android:text="@string/HomePage_name7"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorwhites"
        android:paddingLeft="@dimen/sum_10"
        android:paddingTop="@dimen/sum_5"
        android:text="@string/HomePage_name8"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorwhites"
        android:paddingBottom="@dimen/sum_10"
        android:paddingLeft="@dimen/sum_10"
        android:paddingTop="@dimen/sum_5"
        android:text="@string/HomePage_name9"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TextView
            android:id="@+id/home_upgradevip_id"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sum_40"
            android:layout_marginBottom="@dimen/sum_10"
            android:layout_marginLeft="@dimen/sum_10"
            android:layout_marginRight="@dimen/sum_10"
            android:background="@drawable/btn_bg_rounded_two"
            android:text="@string/HomePage_name10"/>

    </LinearLayout>

</LinearLayout>
