<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_dialog_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhites"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.linkhand.fenxiao.dialog.MyDialogLogin">


    <ImageView
        android:id="@+id/dialog_return_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingRight="@dimen/sum_10"
        android:paddingTop="@dimen/sum_10"
        android:src="@drawable/close"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/sum_10"
        android:paddingTop="@dimen/sum_10"
        android:src="@drawable/prompt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/sum_3"
        android:paddingTop="@dimen/sum_10"
        android:text="@string/mialog_name2"
        android:textColor="@color/gray_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/sum_10"
        android:text="@string/mialog_name3"
        android:textColor="@color/gray_text"/>


    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorgraynessb"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_login_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/sum_10"
            android:paddingTop="@dimen/sum_10"
            android:text="@string/login_denglu"
            android:textColor="@color/colorblack"/>

        <TextView
            android:id="@+id/dialog_login_id2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/sum_10"
            android:paddingTop="@dimen/sum_10"
            android:text="@string/login_zhuce"
            android:textColor="@color/colorred"/>
    </LinearLayout>

</LinearLayout>
