<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dialog_upgrade_vip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhites"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.linkhand.fenxiao.dialog.DialogUpgradeVIP">

    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="right"-->
        <!--android:paddingRight="@dimen/sum_10"-->
        <!--android:paddingTop="@dimen/sum_10"-->
        <!--android:src="@mipmap/a"/>-->


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/sum_10"
        android:paddingTop="@dimen/sum_10"
        android:src="@drawable/prompt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/sum_3"
        android:paddingTop="@dimen/sum_10"
        android:text="@string/mialog_name11"
        android:textColor="@color/gray_text"/>

    <TextView
        android:id="@+id/dialog_tv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/sum_10"
        android:text="@string/mialog_name12"
        android:textColor="@color/gray_text"/>


    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorgraynessb"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_return_id2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/sum_10"
            android:paddingTop="@dimen/sum_10"
            android:text="@string/HomePage_name35"
            android:textColor="@color/gray_text"/>

        <TextView
            android:id="@+id/dialog_viplogin_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/sum_10"
            android:paddingTop="@dimen/sum_10"
            android:text="@string/HomePage_name36"
            android:textColor="@color/colorred"/>
    </LinearLayout>

</LinearLayout>
